--- a/spring/spring-web/pom.xml
+++ b/spring/spring-web/pom.xml
@@ -69,11 +69,11 @@
 		</dependency>
 
 		<!-- http://mvnrepository.com/artifact/javax.servlet/jsp-api -->
-		<dependency>
+		<!-- <dependency>
 			<groupId>javax.servlet</groupId>
 			<artifactId>jsp-api</artifactId>
 			<version>2.0</version>
-		</dependency>
+		</dependency> -->
 
 		<!-- http://mvnrepository.com/artifact/javax.servlet/jstl -->
 		<dependency>
