--- a/pom.xml
+++ b/pom.xml
@@ -33,5 +33,6 @@
 		<module>spring-web</module>
     <module>tools</module>
     <module>clock</module>
+    <module>mq</module>
   </modules>
 </project>
