--- a/spring/spring-jdbc/.classpath
+++ b/spring/spring-jdbc/.classpath
@@ -32,5 +32,7 @@
 			<attribute name="maven.pomderived" value="true"/>
 		</attributes>
 	</classpathentry>
+	<classpathentry kind="lib" path="lib/proxool-0.9.1.jar"/>
+	<classpathentry kind="lib" path="lib/proxool-cglib.jar"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
