--- a/dubbo/pom.xml
+++ b/dubbo/pom.xml
@@ -1,3 +1,4 @@
+<?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
@@ -15,10 +16,10 @@
 
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-		
+
 		<!-- frameworks -->
 		<org.springframework.version>3.2.4.RELEASE</org.springframework.version>
-		
+
 	</properties>
 
 	<dependencies>
@@ -29,10 +30,10 @@
 			<scope>test</scope>
 		</dependency>
 	</dependencies>
-	
+
 	<dependencyManagement>
 		<dependencies>
-			
+
 			<dependency>
 				<groupId>commons-io</groupId>
 				<artifactId>commons-io</artifactId>
@@ -58,13 +59,13 @@
 				<artifactId>javassist</artifactId>
 				<version>3.12.1.GA</version>
 			</dependency>
-			
+
 			<dependency>
 				<groupId>log4j</groupId>
 				<artifactId>log4j</artifactId>
 				<version>1.2.17</version>
 			</dependency>
-            
+
 			<dependency>
 				<groupId>org.slf4j</groupId>
 				<artifactId>slf4j-api</artifactId>
@@ -75,12 +76,12 @@
 				<artifactId>slf4j-log4j12</artifactId>
 				<version>1.6.6</version>
 			</dependency>
-			
+
 			<dependency>
 				<groupId>com.alibaba</groupId>
 				<artifactId>dubbo</artifactId>
-<!--  				<version>2.5.4-SNAPSHOT</version> -->   
-   				<version>2.5.3</version>    
+				<!-- <version>2.5.4-SNAPSHOT</version> -->
+				<version>2.5.3</version>
 			</dependency>
 
 
@@ -89,12 +90,12 @@
 				<artifactId>zookeeper</artifactId>
 				<version>3.3.3</version>
 			</dependency>
-			<dependency> 
+			<dependency>
 				<groupId>com.101tec</groupId>
 				<artifactId>zkclient</artifactId>
 				<version>0.3</version>
 			</dependency>
-		
+
 			<dependency>
 				<groupId>org.springframework</groupId>
 				<artifactId>spring-aop</artifactId>
@@ -125,16 +126,17 @@
 				<artifactId>spring-core</artifactId>
 				<version>${org.springframework.version}</version>
 			</dependency>
-			
-			
+
+
 
 		</dependencies>
 	</dependencyManagement>
-	
+
 
 	<modules>
 		<module>dubbo-demo-api</module>
 		<module>dubbo-demo-provider</module>
 		<module>dubbo-demo-consumer</module>
+		<module>rpc-demo</module>
 	</modules>
 </project>
