--- a/spring/pom.xml
+++ b/spring/pom.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
 		<groupId>org.luisyang</groupId>
@@ -31,7 +32,7 @@
 	<modules>
 		<module>spring-basic</module>
 		<module>spring-web</module>
-    <module>spring-jdbc</module>
-    <module>spring-data-redis</module>
-  </modules>
+		<module>spring-jdbc</module>
+		<module>spring-data-redis</module>
+	</modules>
 </project>
