--- a/container/spring-boot/pom.xml
+++ b/container/spring-boot/pom.xml
@@ -22,5 +22,14 @@
 			<version>4.11</version>
 			<scope>test</scope>
 		</dependency>
+
+
+		<!-- http://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-web -->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-web</artifactId>
+			<version>1.3.3.RELEASE</version>
+		</dependency>
+
 	</dependencies>
 </project>
