--- a/clock/src/main/resources/clock.properties
+++ b/clock/src/main/resources/clock.properties
@@ -1,8 +1,4 @@
-loginUrl=
-
-
-
+loginUrl=http://168.7.55.219:8800/yyptoa/ctrl/common/login
 user1=liuyang,111111
-user4=wusheng,111111
-user2=liruntao,111111
+user4=shiwenhao,111111
 queryName=\u5218\u5408,\u5434\u665F,\u5218\u6D0B,\u6731\u7406\u7965,\u5434\u5EB7,\u9676\u6587\u658C,\u674E\u6DA6\u6D9B
