--- a/test/pom.xml
+++ b/test/pom.xml
@@ -13,5 +13,6 @@
 	<url>http://maven.apache.org</url>
   <modules>
     <module>jmeter</module>
+    <module>selenium</module>
   </modules>
 </project>
